fix notifications style on smaller screens

--- a/www/notifications/app-notifications.less
+++ b/www/notifications/app-notifications.less
@@ -126,6 +126,8 @@
                     justify-content: flex-start;
                     align-items: center;
                     margin: 0.1rem;
+                    white-space: normal;
+                    word-break: break-word;
                     &:focus-visible {
                         outline: @variables_focus_style;
                         border-radius: @variables_radius;
